# stantz

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md
docs/: decisions.md
examples/: basic.rs  cornell_box.rs  random_spheres.rs  test.cpp
inc/: materials.h  objects.h  rendering.h  stantz.h  test.h
include/: linalg.h
include/stantz/: cameras.h  geometry.h  lights.h  materials.h  objects.h  rendering.h  scenes.h
prototypes/: requirements.txt
prototypes/py/: ray.py
src/: bvh.rs  cameras.rs  geometry.c  geometry.cpp  geometry.rs  lib.rs  lighting.rs  lights.c  lights.cpp  linalg.cpp  main.rs  materials.rs  objects.c  objects.cpp  objects.rs  rendering.c  rendering.cpp  rendering.rs  stantz.c  test.c
src/docs/: decisions.md
src/geometry/: aa_box.rs  ray.rs  sphere.rs  triangle.rs
src/rendering/: ray.rs
